# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Pipfile  README.md  README.rst  conanfile.py  conanfile.txt  justfile  pyproject.toml
.github/workflows/: build-and-test.yml  c-cpp.yml  macos.yml  poetry.yml  ubuntu.yml  windows.yml
cmake/: Ccache.cmake  CompileOptions.cmake  Conan.cmake  DependenciesConfig.cmake  FindConan.cmake  FindConda.cmake  FindPoetry.cmake  PipenvConfig.cmake  Poetry.cmake  build_options.cmake  conan.cmake  dependencies.cmake  pipenv.cmake  poetry.cmake  use_conan.cmake  utilities.cmake
src/: CMakeLists.txt  conanfile.py  conanfile.txt
tests/: CMakeLists.txt  conanfile.py  conanfile.txt  main.cpp
